chore: Start migration to Spring Boot 3.2 and its necessary dependencies. Still need to properly handle caching